Second commit UF5

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>dam2_m03_uf4_poo_shop2</name>
+	<name>dam2_m03_uf5_poo_shop</name>
 	<comment></comment>
 	<projects>
 	</projects>
