--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,15 @@
 	  <artifactId>jaxb-runtime</artifactId>
 	  <version>2.3.3</version>
 	</dependency>
-	<dependency>
+	<!--<dependency>
 	  <groupId>org.hibernate</groupId>
 	  <artifactId>hibernate-core</artifactId>
 	  <version>5.4.10.Final</version>
+	</dependency>-->
+	<dependency> 
+	  <groupId>org.mongodb</groupId>
+	  <artifactId>mongo-java-driver</artifactId>
+	  <version>3.10.2</version> 
 	</dependency>
   </dependencies>
   <build>
